# fp-NGFW-SMC-python

./: .gitignore  .pypirc  .readthedocs.yaml  HISTORY.rst  LICENSE  README.rst  pyproject.toml  setup.py
smc/: __init__.py  __version__.py  compat.py
smc-monitoring/: HISTORY.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py  test.py
smc-monitoring/smc_monitoring/: __init__.py  __version__.py  wsocket.py
smc-monitoring/smc_monitoring/models/: __init__.py  calendar.py  constants.py  filters.py  formats.py  formatters.py  query.py  values.py
smc-monitoring/smc_monitoring/monitors/: __init__.py  alerts.py  blacklist.py  block_list.py  connections.py  logs.py  neighbors.py  routes.py  sslvpn.py  users.py  vpns.py
smc-monitoring/smc_monitoring/pubsub/: subscribers.py
smc-monitoring/tests/: docker_smc_bootstrap.py  test_filters.py  test_queries.py
smc/administration/: access_rights.py  eca_client_config.py  filter.py  license.py  monitoring_status.py  reports.py  role.py  scheduled_tasks.py  system.py  system_properties.py  tasks.py  upcoming_event.py  updates.py
smc/api/: common.py  configloader.py  entry_point.py  exceptions.py  session.py  web.py
smc/base/: collection.py  decorators.py  mixins.py  model.py  structs.py  util.py
smc/core/: addon.py  advanced_settings.py  collection.py  contact_address.py  engine.py  engine_vss.py  engines.py  external_pki.py  general.py  ha_management.py  hardware.py  interfaces.py  lldp.py  node.py  policy.py  resource.py  route.py  session_monitoring.py  sub_interfaces.py  waiters.py
smc/docs/: conf.py  requirements.txt
smc/elements/: __init__.py  alerts.py  common.py  group.py  helpers.py  netlink.py  network.py  other.py  profiles.py  protocols.py  servers.py  service.py  situations.py  ssm.py  tags.py  user.py
smc/examples/: README.md  __init__.py  add_sidewinder_routes.py  aggregated_interface.py  alert_chain_and_alert_chain_rule.py  alert_policy_and_alert_rule.py  alias.py  basic_requests.py  bgp.py  certify_component_ext_pki.py  cloud_engine.py  concurrent_api_versions.py  configure_ztna_addon.py  connection_type.py  domain_name.py  eca_configuration.py  elasticsearch_cluster.py  engine-node-health.py  engine_query_route.py  export_all.py  file_filtering_policy.py  firewall_policy_nat.py  gateway_certificates.py  gateway_profile.py  group.py  ha_management.py  import_engine_upgrade.py  internal_gateway.py  internal_user_and_user_group.py  ip_lists.py  layer3_cluster.py  layer3_cluster_ldap_replication.py  layer3_fw.py  (+39 more)
(+49 files in other folders)
