[build-system]
requires = [
    "setuptools",
    "wheel",
    "setuptools-scm[toml]",
    "requests",
    "pytz",
    "urllib3"
]
build-backend = "setuptools.build_meta"


[project]
name = 'fp-NGFW-SMC-python'
authors = [
    {name = "Forcepoint", email = "PSIRT@forcepoint.com"},
]
description = "Python based API to Forcepoint NGFW Management Center"
requires-python = ">=3.5"
license = {text = "Apache License (2.0)"}
dynamic = ["version", "readme"]
dependencies = [
        "requests>=2.31.0",
        "pytz>=2022.6",
        "urllib3>=1.26.18"
]
classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3"
]


[tool.setuptools.dynamic]
version = {attr = "smc.__version__"}  # any module attribute compatible with ast.literal_eval
readme = {file = ["README.rst", "HISTORY.rst"]}


[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["smc", "smc.*"]  # ["*"] by default
exclude = ["smc.tests", "smc.docs"]  # empty by default
namespaces = true  # true by default


[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]
